<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".StyleSetActivity2">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_onClick"
        android:text="@string/returne"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons" />
    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_equal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cool_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLightDarkAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light_action_bar_dark" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark" />

    </RadioGroup>
</LinearLayout>